--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="title_Food">Food</string>
     <string name="title_activities">Activities</string>
     <string name="title_places">Places</string>
-    <string name="hint_search">Eg. Mumbai</string>
+    <string name="hint_search">Search City Eg. Mumbai</string>
 </resources>
